--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "@uniswap/v2-periphery",
+  "name": "@intercroneswap/v2-periphery",
   "version": "1.1.0-beta.0",
-  "description": "🎚 Peripheral smart contracts for interacting with Uniswap V2",
+  "description": "🎚 Peripheral smart contracts for interacting with InterCroneswap V2",
   "engines": {
     "node": ">=10"
   },
-  "homepage": "https://uniswap.org",
+  "homepage": "https://intercroneswap.org",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Uniswap/uniswap-v2-periphery"
+    "url": "https://github.com/InterCroneswap/intercroneswap-v2-periphery"
   },
   "files": [
     "build",
     "contracts"
   ],
-  "dependencies": {
-    "@uniswap/lib": "4.0.1-alpha",
-    "@uniswap/v2-core": "1.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/chai": "^4.2.6",
     "@types/mocha": "^5.2.7",
@@ -28,7 +25,7 @@
     "ncp": "^2.0.0",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.0",
-    "solc": "0.6.6",
+    "solc": "0.6.8",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.3"
   },
