--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@intercroneswap/v2-periphery",
-  "version": "1.1.0-beta.0",
+  "version": "0.1.1-trx",
   "description": "🎚 Peripheral smart contracts for interacting with InterCroneswap V2",
   "engines": {
     "node": ">=10"
@@ -8,7 +8,7 @@
   "homepage": "https://intercroneswap.org",
   "repository": {
     "type": "git",
-    "url": "https://github.com/InterCroneswap/intercroneswap-v2-periphery"
+    "url": "https://github.com/InterCroneswapOrg/v2-periphery"
   },
   "files": [
     "build",
